chore: print root cause in opendal logging interceptor (#7183)
* chore: print root cause in opendal

Signed-off-by: evenyag <realevenyag@gmail.com>

* refactor: extract a function root_source() to get the cause

Signed-off-by: evenyag <realevenyag@gmail.com>

---------

Signed-off-by: evenyag <realevenyag@gmail.com>

--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -12,6 +12,7 @@ services-memory = ["opendal/services-memory"]
 
 [dependencies]
 bytes.workspace = true
+common-error.workspace = true
 common-telemetry.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
