--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -47,6 +47,7 @@ file-engine.workspace = true
 futures.workspace = true
 futures-util.workspace = true
 humantime.workspace = true
+itertools.workspace = true
 jsonb.workspace = true
 lazy_static.workspace = true
 meta-client.workspace = true
