--- a/.github/workflows/multi-lang-tests.yml
+++ b/.github/workflows/multi-lang-tests.yml
@@ -14,7 +14,6 @@ on:
   push:
     branches:
       - main
-      - master
   workflow_dispatch:
 
 concurrency:
@@ -57,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: greptime-bin
-          path: bin/greptime
+          path: bin/
           retention-days: 1
 
   run-multi-lang-tests:
