ci: add multi lang tests workflow into release and nightly workflows
Signed-off-by: Dennis Zhuang <killme2008@gmail.com>

--- a/.github/workflows/multi-lang-tests.yml
+++ b/.github/workflows/multi-lang-tests.yml
@@ -52,121 +52,6 @@ jobs:
   run-multi-lang-tests:
     name: Run Multi-language SDK Tests
     needs: build-greptimedb
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Checkout greptimedb-tests repository
-        uses: actions/checkout@v4
-        with:
-          repository: GreptimeTeam/greptimedb-tests
-          persist-credentials: false
-
-      - name: Download pre-built greptime binary
-        uses: actions/download-artifact@v4
-        with:
-          name: greptime-bin
-          path: bin
-
-      - name: Setup greptime binary
-        run: |
-          chmod +x ./bin/greptime
-          ls -lh ./bin/greptime
-          ./bin/greptime --version
-
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.8'
-
-      - name: Setup Go 1.24
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24'
-          cache: true
-          cache-dependency-path: go-tests/go.sum
-
-      - name: Install Python dependencies
-        run: |
-          pip install mysql-connector-python psycopg2-binary
-          python3 -c "import mysql.connector; print(f'mysql-connector-python {mysql.connector.__version__}')"
-          python3 -c "import psycopg2; print(f'psycopg2 {psycopg2.__version__}')"
-
-      - name: Install Go dependencies
-        working-directory: go-tests
-        run: |
-          go mod download
-          go mod verify
-          go version
-
-      - name: Kill existing GreptimeDB processes
-        run: |
-          pkill -f greptime || true
-          sleep 2
-
-      - name: Start GreptimeDB standalone
-        run: |
-          ./bin/greptime standalone start \
-            --http-addr 0.0.0.0:4000 \
-            --rpc-addr 0.0.0.0:4001 \
-            --mysql-addr 0.0.0.0:4002 \
-            --postgres-addr 0.0.0.0:4003 \
-            --user-provider=static_user_provider:cmd:greptime_user=greptime_pwd > /tmp/greptimedb.log 2>&1 &
-
-      - name: Wait for GreptimeDB to be ready
-        run: |
-          echo "Waiting for GreptimeDB..."
-          for i in {1..60}; do
-            if curl -sf http://localhost:4000/health > /dev/null; then
-              echo "✅ GreptimeDB is ready"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "❌ GreptimeDB failed to start"
-          cat /tmp/greptimedb.log
-          exit 1
-
-      - name: Run multi-language tests
-        env:
-          DB_NAME: test_db
-          MYSQL_HOST: localhost
-          MYSQL_PORT: 4002
-          POSTGRES_HOST: localhost
-          POSTGRES_PORT: 4003
-          HTTP_PORT: 4000
-          GREPTIME_USERNAME: greptime_user
-          GREPTIME_PASSWORD: greptime_pwd
-        run: |
-          chmod +x ./run_tests.sh
-          ./run_tests.sh
-
-      - name: Collect logs on failure
-        if: failure()
-        run: |
-          echo "=== GreptimeDB Logs ==="
-          cat /tmp/greptimedb.log || true
-
-      - name: Upload test logs on failure
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-logs
-          path: |
-            /tmp/greptimedb.log
-            java-tests/target/surefire-reports/
-            python-tests/.pytest_cache/
-            go-tests/*.log
-            **/test-output/
-          retention-days: 7
-
-      - name: Cleanup
-        if: always()
-        run: |
-          pkill -f greptime || true
+    uses: ./.github/workflows/run-multi-lang-tests.yml
+    with:
+      artifact-name: greptime-bin
