chore: revert ci and add nodejs
Signed-off-by: Dennis Zhuang <killme2008@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -310,9 +310,7 @@ jobs:
 
   release-images-to-dockerhub:
     name: Build and push images to DockerHub
-    if: |
-      !cancelled() && !failure() &&
-      (inputs.release_images || github.event_name == 'push' || github.event_name == 'schedule')
+    if: ${{ inputs.release_images || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [
       allocate-runners,
       build-linux-amd64-artifacts,
@@ -388,9 +386,7 @@ jobs:
 
   publish-github-release:
     name: Create GitHub release and upload artifacts
-    if: |
-      !cancelled() && !failure() &&
-      (inputs.publish_github_release || github.event_name == 'push' || github.event_name == 'schedule')
+    if: ${{ inputs.publish_github_release || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [ # The job have to wait for all the artifacts are built.
       allocate-runners,
       build-linux-amd64-artifacts,
