--- a/docker/ci/centos/Dockerfile
+++ b/docker/ci/centos/Dockerfile
@@ -13,7 +13,7 @@ ARG TARGETARCH
 
 ADD $TARGETARCH/greptime /greptime/bin/
 
-ENV PATH /greptime/bin/:$PATH
+ENV PATH=/greptime/bin/:$PATH
 
 ENV MALLOC_CONF="prof:true,prof_active:false"
 
