test: basic infra for set gc
Signed-off-by: discord9 <discord9@163.com>

--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -54,6 +54,7 @@ log-query = { workspace = true }
 loki-proto.workspace = true
 meta-client.workspace = true
 meta-srv = { workspace = true, features = ["mock"] }
+mito2.workspace = true
 moka.workspace = true
 mysql_async = { version = "0.35", default-features = false, features = [
     "time",
