move the flow grpc configure context to plugins crate

--- a/src/plugins/Cargo.toml
+++ b/src/plugins/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 
 [dependencies]
 auth.workspace = true
+catalog.workspace = true
 clap.workspace = true
 cli.workspace = true
 common-base.workspace = true
