feat: Add built-in daemon mode for standalone service
Implement native daemonization support for GreptimeDB standalone mode
to allow the process to run independently of shell sessions.

Changes:
- Add daemonize crate dependency (Unix-only)
- Add --daemon/-d CLI flag to standalone start command
- Add daemon configuration option to StandaloneOptions
- Implement daemonization with proper stdout/stderr redirection
- Redirect logs to data_home/logs/greptime.stdout and greptimedb.stderr

This addresses the need for resilient background execution on embedded
and edge deployments, especially on ARM64 boards where systemd may not
be available.

Fixes #7314

Signed-off-by: Eshaan <eshaan28gupta@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,6 +124,7 @@ config = "0.13.0"
 const_format = "0.2"
 crossbeam-utils = "0.8"
 dashmap = "6.1"
+daemonize = "0.5"
 datafusion = "50"
 datafusion-common = "50"
 datafusion-expr = "50"
