--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -93,6 +93,7 @@ tonic.workspace = true
 tracing-appender.workspace = true
 
 [target.'cfg(unix)'.dependencies]
+daemonize.workspace = true
 pprof = { version = "0.14", features = [
     "flamegraph",
 ] }
